Write markup for left and right side main content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,27 @@
     <link href="styles.css" rel="stylesheet">
   </head>
   <body>
-    
+    <header>INTENTION TIMER</header>
+    <main>
+      <section class="main-left-box">
+        <h1 class="main-title">New Activity</h1>
+        <form>
+          <label>Select a category:</label>
+          <button></button>
+          <button></button>
+          <button></button>
+          <br>
+          <label>What would youlike to accomplish during this time?</label>
+          <input type="text">
+          <input type="number">
+          <input type="number">
+          <button>START ACTIVITY</button>
+        </form>
+      </section>
+      <section class="main-right-box">
+       <h1 class="main-title">Past Activities</h1>
+      </section>
+    </main>
   <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
