Format activity inputs and classes

--- a/index.html
+++ b/index.html
@@ -27,24 +27,28 @@
                 <img class="category-icon hidden" src="assets/meditate-active.svg" alt="lotus flower">
                 <p class="button-title">Meditate</p>
               </label>
-          </li>
-          <li>
+            </li>
+            <li>
               <input class="category-input exercise-box hidden" type="radio" name="category" id="exercise">
               <label class="category-label"for="exercise">
                 <img class="category-icon" src="assets/exercise.svg" alt="tennis shoe">
                 <img class="category-icon hidden" src="assets/exercise-active.svg" alt="tennis shoe">
                 <p class="button-title">Exercise</p>
               </label>
-          </li>
-          </ul>
-          <label>What would youlike to accomplish during this time?</label>
-          <input type="text">
-          <section class="input-time">
-            <label>Minutes</label>
-            <input type="number">
-            <label>Seconds</label>
-            <input type="number">
-          </section>
+            </li>
+           </ul>
+           <ul class="activity">
+            <li>
+              <label class="activity-input-label">What would youlike to accomplish during this time?</label>
+              <input class="activity-input" type="text" id="activity">
+            </li>
+            <li>
+              <label class="activity-input-label">Minutes</label>
+              <input class="activity-input" type="text" id="minutes">
+              <label class="activity-input-label">Seconds</label>
+              <input class="activity-input" type="text" id="seconds">
+            </li>
+           </ul>
           <button>START ACTIVITY</button>
         </form>
       </section>
