Remove class from activity input

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
            <ul class="activity-container">
             <li>
               <label class="activity-input-label">What would you like to accomplish during this time?</label>
-              <input class="activity-input input-line" type="text" id="activity">
+              <input class="activity-input" type="text" id="activity">
             </li>
             <div class="activity-list-container">
               <li class="activity-list">
