Change form button to input, adjust margins

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 <label class="activity-input-label">Seconds</label>
                 <input class="activity-input" type="text" id="seconds">
               </li>
-          </div>
+            </div>
            </ul>
-         <button class="activity-button">START ACTIVITY</button>
+         <input type="submit" class="activity-button" value="START ACTIVITY">
         </form>
       </section>
       <section class="main-right-box">
@@ -66,4 +66,5 @@
     </main>
   <script type="text/javascript" src="main.js"></script>
   </body>
+ </html>
 </html>
