--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
        </section>
       </section>
     </main>
+  <script type="text/javascript" src="activity.js"></script>
   <script type="text/javascript" src="main.js"></script>
   </body>
  </html>
