Added class names to icon images

--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
             <li>
               <input class="category-input study-box hidden" type="radio" name="category" id="study">
               <label class="category-label" for="study">
-                <img class="category-icon" src="assets/study.svg" alt="light bulb">
-                <img class="category-icon hidden" src="assets/study-active.svg" alt="light bulb">
+                <img class="category-icon deactivated" src="assets/study.svg" alt="light bulb">
+                <img class="category-icon hidden activated" src="assets/study-active.svg" alt="light bulb">
                 <p class="button-title">Study</p>
               </label>
             </li>
             <li>
               <input class="category-input meditate-box hidden" type="radio" name="category" id="meditate">
               <label class="category-label"for="meditate">
-                <img class="category-icon" src="assets/meditate.svg" alt="lotus flower">
-                <img class="category-icon hidden" src="assets/meditate-active.svg" alt="lotus flower">
+                <img class="category-icon deactivated" src="assets/meditate.svg" alt="lotus flower">
+                <img class="category-icon hidden activated" src="assets/meditate-active.svg" alt="lotus flower">
                 <p class="button-title">Meditate</p>
               </label>
             </li>
             <li>
               <input class="category-input exercise-box hidden" type="radio" name="category" id="exercise">
               <label class="category-label"for="exercise">
-                <img class="category-icon" src="assets/exercise.svg" alt="tennis shoe">
-                <img class="category-icon hidden" src="assets/exercise-active.svg" alt="tennis shoe">
+                <img class="category-icon deactivated" src="assets/exercise.svg" alt="tennis shoe">
+                <img class="category-icon hidden activated" src="assets/exercise-active.svg" alt="tennis shoe">
                 <p class="button-title">Exercise</p>
               </label>
             </li>
