Re-name class for past-activities section

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       </section>
       <section class="main-right-box">
        <h1 class="main-title">Past Activities</h1>
-       <section class="main-right-box-default">
-         <p class="past-activities-default">You haven't logged any activities yet.</p>
-         <p class="past-activities-default">Complete the form to the left to get started!</p>
+       <section class="past-activity-container">
+         <p class="past-activity-default">You haven't logged any activities yet.</p>
+         <p class="past-activity-default">Complete the form to the left to get started!</p>
        </section>
       </section>
     </main>
