Created form container, and timer container

--- a/index.html
+++ b/index.html
@@ -9,52 +9,56 @@
     <main>
       <section class="main-left-box">
         <h1 class="main-title">New Activity</h1>
-        <form>
-          <h2>Select a category:</h2>
-          <ul class="category-container">
-            <li>
-              <input class="category-input study-box hidden" type="radio" name="category" id="study">
-              <label class="category-label" for="study">
-                <img class="category-icon" src="assets/study.svg" alt="light bulb">
-                <img class="category-icon hidden" src="assets/study-active.svg" alt="light bulb">
-                <p class="button-title">Study</p>
-              </label>
-            </li>
-            <li>
-              <input class="category-input meditate-box hidden" type="radio" name="category" id="meditate">
-              <label class="category-label"for="meditate">
-                <img class="category-icon" src="assets/meditate.svg" alt="lotus flower">
-                <img class="category-icon hidden" src="assets/meditate-active.svg" alt="lotus flower">
-                <p class="button-title">Meditate</p>
-              </label>
-            </li>
-            <li>
-              <input class="category-input exercise-box hidden" type="radio" name="category" id="exercise">
-              <label class="category-label"for="exercise">
-                <img class="category-icon" src="assets/exercise.svg" alt="tennis shoe">
-                <img class="category-icon hidden" src="assets/exercise-active.svg" alt="tennis shoe">
-                <p class="button-title">Exercise</p>
-              </label>
-            </li>
-           </ul>
-           <ul class="activity-container">
-            <li>
-              <label class="activity-input-label">What would you like to accomplish during this time?</label>
-              <input class="activity-input" type="text" id="activity">
-            </li>
-            <div class="activity-list-container">
-              <li class="activity-list">
-                <label class="activity-input-label">Minutes</label>
-                <input class="activity-input" type="text" id="minutes">
+        <section class="form-container">
+          <form>
+            <h2>Select a category:</h2>
+            <ul class="category-container">
+              <li>
+                <input class="category-input study-box hidden" type="radio" name="category" id="study">
+                <label class="category-label" for="study">
+                  <img class="category-icon" src="assets/study.svg" alt="light bulb">
+                  <img class="category-icon hidden" src="assets/study-active.svg" alt="light bulb">
+                  <p class="button-title">Study</p>
+                </label>
               </li>
-              <li class="activity-list">
-                <label class="activity-input-label">Seconds</label>
-                <input class="activity-input" type="text" id="seconds">
+              <li>
+                <input class="category-input meditate-box hidden" type="radio" name="category" id="meditate">
+                <label class="category-label"for="meditate">
+                  <img class="category-icon" src="assets/meditate.svg" alt="lotus flower">
+                  <img class="category-icon hidden" src="assets/meditate-active.svg" alt="lotus flower">
+                  <p class="button-title">Meditate</p>
+                </label>
               </li>
-            </div>
-           </ul>
-           <input type="submit" class="activity-button" value="START ACTIVITY">
-        </form>
+              <li>
+                <input class="category-input exercise-box hidden" type="radio" name="category" id="exercise">
+                <label class="category-label"for="exercise">
+                  <img class="category-icon" src="assets/exercise.svg" alt="tennis shoe">
+                  <img class="category-icon hidden" src="assets/exercise-active.svg" alt="tennis shoe">
+                  <p class="button-title">Exercise</p>
+                </label>
+              </li>
+             </ul>
+             <ul class="activity-container">
+              <li>
+                <label class="activity-input-label">What would you like to accomplish during this time?</label>
+                <input class="activity-input" type="text" id="activity">
+              </li>
+              <div class="activity-list-container">
+                <li class="activity-list">
+                  <label class="activity-input-label">Minutes</label>
+                  <input class="activity-input" type="text" id="minutes">
+                </li>
+                <li class="activity-list">
+                  <label class="activity-input-label">Seconds</label>
+                  <input class="activity-input" type="text" id="seconds">
+                </li>
+              </div>
+             </ul>
+             <input type="submit" class="activity-button" value="START ACTIVITY">
+          </form>
+        </section>
+        <section class="timer-container">
+        </section>
       </section>
       <section class="main-right-box">
        <h1 class="main-title">Past Activities</h1>
