Format error messages

--- a/index.html
+++ b/index.html
@@ -41,15 +41,18 @@
             <li>
               <label class="activity-input-label">What would you like to accomplish during this time?</label>
               <input class="activity-input" type="text" id="activity">
+              <label class="error-message hidden">A description is required.</label> 
             </li>
             <div class="activity-list-container">
               <li class="activity-list">
                 <label class="activity-input-label">Minutes</label>
                 <input class="activity-input" type="text" id="minutes">
+                <label class="error-message hidden">A time limit is required.</label>
               </li>
               <li class="activity-list">
                 <label class="activity-input-label">Seconds</label>
                 <input class="activity-input" type="text" id="seconds">
+                <label class="error-message hidden">A time limit is required.</label>
               </li>
             </div>
            </ul>
