--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
               </label>
             </li>
            </ul>
+           <label class="error-message hidden">A category is required</label>
            <ul class="activity-container">
             <li>
               <label class="activity-input-label">What would you like to accomplish during this time?</label>
               <input class="activity-input" type="text" id="activity">
-              <label class="error-message hidden">A description is required.</label> 
+              <label class="error-message hidden">A description is required.</label>
             </li>
             <div class="activity-list-container">
               <li class="activity-list">
