Add empty p tag to hold timer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
              <input type="submit" class="activity-button" value="START ACTIVITY">
           </form>
         </section>
-        <section class="timer-container">
+        <section class="timer-container hidden">
+          <p></p>
         </section>
       </section>
       <section class="main-right-box">
