--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <main>
       <section class="main-left-box">
         <h1 class="main-title">New Activity</h1>
+        <section class="form-container">
         <form>
           <h2>Select a category:</h2>
           <ul class="category-container" id="categoryList">
@@ -55,64 +56,15 @@
                 <input class="activity-input" type="text" id="seconds">
                 <label class="error-message hidden" for="seconds">A time limit is required.</label>
               </li>
-              <li>
-                <input class="category-input exercise-box hidden" type="radio" name="category" id="exercise">
-                <label class="category-label"for="exercise">
-                  <img class="category-icon activated" src="assets/exercise.svg" alt="tennis shoe">
-                  <img class="category-icon hidden deactivated" src="assets/exercise-active.svg" alt="tennis shoe">
-                  <p class="button-title">Exercise</p>
-                </label>
-              </li>
-             </ul>
-             <label class="error-message hidden">A category is required</label>
-             <ul class="activity-container">
-              <li>
-                <label class="activity-input-label">What would you like to accomplish during this time?</label>
-                <input class="activity-input" type="text" id="activity">
-                <label class="error-message hidden">A description is required.</label>
-              </li>
-              <div class="activity-list-container">
-                <li class="activity-list">
-                  <label class="activity-input-label">Minutes</label>
-                  <input class="activity-input" type="text" id="minutes">
-                  <label class="error-message hidden">A time limit is required.</label>
-                </li>
-                <li class="activity-list">
-                  <label class="activity-input-label">Seconds</label>
-                  <input class="activity-input" type="text" id="seconds">
-                  <label class="error-message hidden">A time limit is required.</label>
-                </li>
-                <li>
-                  <input class="category-input exercise-box hidden" type="radio" name="category" id="exercise">
-                  <label class="category-label"for="exercise">
-                    <img class="category-icon" src="assets/exercise.svg" alt="tennis shoe">
-                    <img class="category-icon hidden" src="assets/exercise-active.svg" alt="tennis shoe">
-                    <p class="button-title">Exercise</p>
-                  </label>
-                </li>
-               </ul>
-               <ul class="activity-container">
-                <li>
-                  <label class="activity-input-label">What would you like to accomplish during this time?</label>
-                  <input class="activity-input" type="text" id="activity">
-                </li>
-                <div class="activity-list-container">
-                  <li class="activity-list">
-                    <label class="activity-input-label">Minutes</label>
-                    <input class="activity-input" type="text" id="minutes">
-                  </li>
-                  <li class="activity-list">
-                    <label class="activity-input-label">Seconds</label>
-                    <input class="activity-input" type="text" id="seconds">
-                  </li>
-                </div>
-               </ul>
-               <input type="submit" class="activity-button" value="START ACTIVITY">
-            </form>
-        </section>
-        </section>
-        <section class="timer-container hidden">
-          <p></p>
+            </ul>
+            <label class="error-message hidden">A category is required</label>
+            <input type="submit" class="activity-button" value="START ACTIVITY">
+          </form>
+          <section class="timer-container hidden">
+            <p class="timer-activity-text"></p>
+            <p class="timer"></p>
+            <button class="timer-button">START</button>
+          </section>
         </section>
       </section>
       <section class="main-right-box">
