--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             <div class="activity-list-container">
               <li class="activity-list">
                 <label class="activity-input-label">Minutes</label>
-                <input class="activity-input" type="text" id="minutes">
+                <input class="activity-input" type="text" id="minutes" autocomplete="off">
                 <label class="error-message visibility-hidden" for="minutes"><span> <img class="warning-icon visibility-hidden" src="assets/warning.svg" alt="error icon"></span>A time limit is required.</label>
               <li class="activity-list">
                 <label class="activity-input-label">Seconds</label>
-                <input class="activity-input" type="text" id="seconds">
+                <input class="activity-input" type="text" id="seconds" autocomplete="off">
                 <label class="error-message visibility-hidden" for="seconds"> <span> <img class="warning-icon visibility-hidden" src="assets/warning.svg" alt="error icon"></span>A time limit is required.</label>
               </li>
             </ul>
