--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </form>
           <section class="timer-container hidden">
             <p class="timer-activity-text"></p>
-            <p class="timer"></p>
+            <h1 class="timer"></h1>
             <button class="timer-button">START</button>
           </section>
         </section>
