--- a/index.html
+++ b/index.html
@@ -70,16 +70,20 @@
       <section class="main-right-box">
        <h1 class="main-title">Past Activities</h1>
        <section class="past-activity-container">
-         <p class="past-activity-default hidden">You haven't logged any activities yet.</p>
-         <p class="past-activity-default hidden">Complete the form to the left to get started!</p>
+         <div class="default-text-wrapper hidden">
+           <p class="past-activity-default">You haven't logged any activities yet.</p>
+           <p class="past-activity-default">Complete the form to the left to get started!</p>
+         </div>
          <ul class="past-activity-card">
-           <li>
-             <div class="past-activity-wrapper">
-               <p class"past-activity-category">Meditate</p>
+           <div class="card">
+             <li class="past-activity">
+               <p class="past-activity-category">Meditate</p>
                <time class="past-activity-time">5 MIN 0 SECONDS</time>
-            </div>
-             <p class="past-activity-description">Deep Breathing</p>
-           </li>
+            </li>
+            <li class="past-activity-description">
+              <p>Deep Breathing</p>
+            </li>
+         </div>
          </ul>
        </section>
       </section>
