--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
            <ul class="activity-container">
             <li>
               <label class="activity-input-label">What would you like to accomplish during this time?</label>
-              <input class="activity-input" type="text" id="activity">
+              <input class="activity-input" type="text" id="activity" autocomplete="off">
               <label class="error-message visibility-hidden" for"activity">
               <span> <img class="warning-icon visibility-hidden" src="assets/warning.svg" alt="error icon"></span>A description is required.</label>
             </li>
