--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
            <p class="past-activity-default">Complete the form to the left to get started!</p>
          </div>
          <ul class="past-activity-card">
-           <div class="card">
+           <article class="card">
              <li class="past-activity">
                <p class="past-activity-category">Meditate</p>
                <time class="past-activity-time">5 MIN 0 SECONDS</time>
@@ -83,7 +83,7 @@
             <li class="past-activity-description">
               <p>Deep Breathing</p>
             </li>
-         </div>
+         </article>
          </ul>
        </section>
       </section>
