Add log activity button

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <p class="timer-activity-text"></p>
             <h1 class="timer"></h1>
             <button class="timer-button">START</button>
+            <button class="">LOG ACTIVITY</button>
           </section>
         </section>
       </section>
