--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
            <span> <img class="warning-icon visibility-hidden" src="assets/warning.svg" alt="error icon"></span>A category is required.</label>
            <ul class="activity-container">
             <li>
-              <label class="activity-input-label">What would you like to accomplish during this time?</label>
+              <label class="activity-input-label activity-user-input-label">What would you like to accomplish during this time?</label>
               <input class="activity-input" type="text" id="activity" autocomplete="off">
               <label class="error-message visibility-hidden" for"activity">
               <span> <img class="warning-icon visibility-hidden" src="assets/warning.svg" alt="error icon"></span>A description is required.</label>
