Change class name for past activity section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
            <p class="past-activity-default">You haven't logged any activities yet.</p>
            <p class="past-activity-default">Complete the form to the left to get started!</p>
          </div>
-         <ul class="past-activity-card">
+         <ul class="past-activity-list">
          </ul>
        </section>
       </section>
