Move create new activity button from js file

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <button class="timer-button">START</button>
             <button class="log-activity activity button hidden">LOG ACTIVITY</button>
           </section>
+          <button class="create-new-activity hidden">CREATE A NEW ACTIVITY</button>
         </section>
       </section>
       <section class="main-right-box">
