--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <section class="main-right-box">
        <h1 class="main-title">Past Activities</h1>
        <section class="past-activity-container">
-         <div class="default-text-wrapper hidden">
+         <div class="default-text-wrapper">
            <p class="past-activity-default">You haven't logged any activities yet.</p>
            <p class="past-activity-default">Complete the form to the left to get started!</p>
          </div>
